# neo-space

./: .dockerignore  .gitattributes  .gitignore  AGANT.md  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  config.toml  docker-compose.backend.yml  docker-compose.yml  eslint.config.mjs  eslint.config.ts  global.d.ts  next.config.ts  package.json  pnpm-lock.yaml  unocss.config.ts
.github/workflows/: docker-backend.yml  docker-frontend.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
backend/src/: db.rs  error.rs  main.rs  models.rs
backend/src/config/: mod.rs  settings.rs
backend/src/guards/: auth.rs  client_ip.rs  mod.rs  owner.rs
backend/src/models/: account.rs  ai_summary.rs  category.rs  comment.rs  conversions.rs  jwt.rs  link.rs  mod.rs  note.rs  options.rs  page.rs  post.rs  recently.rs  response.rs  time_capsule.rs  user.rs
backend/src/routes/: activities.rs  ai.rs  categories.rs  comments.rs  config.rs  links.rs  mod.rs  nbnhhsh.rs  notes.rs  pages.rs  posts.rs  recentlies.rs  users.rs
backend/src/routes/auth/: avatar.rs  bind.rs  common.rs  mod.rs  oauth.rs  user.rs
backend/src/routes/comments/: admin.rs  create.rs  delete.rs  list.rs  mod.rs  update.rs
backend/src/services/: account_repository.rs  ai_service.rs  cache_service.rs  change_stream_service.rs  db_service.rs  github_oauth.rs  ip_service.rs  mod.rs  options_repository.rs  options_service.rs  qq_oauth.rs  reader_repository.rs  revalidation_service.rs  spam_detector.rs  turnstile.rs
backend/src/services/auth/: avatar.rs  identity.rs  mod.rs
backend/src/services/comment/: service.rs
backend/src/utils/: jwt.rs  mod.rs  serializers.rs
scripts/: code-to-markdown.sh  dev.sh  docker-entrypoint.sh  download-ip2region.sh  mongo-init-rs.sh
src/: icons.d.ts
src/actions/: comment.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/[slug]/: page.tsx
src/app/api/revalidate/: route.ts
src/app/auth/callback/: layout.tsx  page.tsx
src/app/feed/: route.ts
src/app/friends/: page.tsx
src/app/notes/: page.tsx
src/app/notes/[nid]/: page.tsx
src/app/posts/: page.tsx
src/components/auth/: AvatarSelector.tsx  BindAnonymousDialog.tsx  OAuthButtons.tsx  ProfilePopover.tsx
src/components/comment/: CommentContext.tsx  CommentForm.tsx  CommentItem.tsx  CommentList.tsx  CommentSection.tsx  CommentSectionLazy.tsx  CommentSectionServer.tsx  CommentSkeleton.tsx  TurnstileWidget.tsx  context.ts  hooks.ts  index.ts
src/components/comment/auth/: AvatarSelector.tsx  OAuthButtons.tsx  ProfilePopover.tsx
src/components/comment/comment-form/: AuthenticatedUser.tsx  CornerBorders.tsx  EmojiPicker.tsx  GuestActions.tsx  GuestInputs.tsx  LoginPopover.tsx  SubmitButton.tsx  ToolbarLeft.tsx  TurnstileStatus.tsx  constants.ts  index.ts  types.ts  utils.ts
src/components/comment/comment-item/: CommentActions.tsx  CommentEditForm.tsx  CommentHeader.tsx  index.tsx
src/components/common/: IconProvider.tsx  InteractiveList.tsx  SectionHeader.tsx  index.ts  magnetic-hover-effect.tsx
src/components/common/content/: AnimatedLink.module.scss  AnimatedLink.tsx  Banner.tsx  ClientOnlyScript.tsx  ClientOnlySpan.tsx  ContainerBlock.tsx  EnhancedHeading.tsx  GridImages.tsx  KatexStyles.tsx  MasonryImages.tsx  MermaidDiagram.tsx  Spoiler.module.scss  Spoiler.tsx  ZoomableContainer.tsx
src/components/common/markdown/: CommentMarkdown.tsx  MarkdownPreview.tsx  MarkdownRenderer.tsx  highlighter.ts  index.ts  utils.ts
src/components/common/navigation/: FloatingNav.tsx
src/components/common/nbnhhsh/: AbbreviationText.tsx  NbnhhshContext.tsx  NbnhhshPanel.tsx  context.ts  index.ts  useNbnhhsh.ts
src/components/common/smart-date/: SmartDate.tsx  index.ts
src/components/icons/: index.tsx
src/components/layouts/: BottomBar.tsx  Drawer.tsx  Footer.tsx  HomePage.tsx  MainLayout.tsx  NavBar.tsx  index.ts
src/components/posts/: TableOfContents.tsx
src/components/ui/: ActionPill.tsx  Avatar.tsx  GlassCard.tsx  SectionHeader.tsx  SocialLink.tsx  Tag.tsx  index.ts  kbd.tsx  popover.tsx  toggle-switch.tsx  tooltip.tsx
src/hook/: use-comments.tsx
src/lib/: api-client.ts  color-migration-map.ts  date.ts  file-icons.tsx  parse.ts  toc.ts  ui.tsx  utils.ts
src/lib/context/: ui-context.ts
src/lib/hooks/: iconify.ts  useUI.ts
src/lib/stores/: auth-store.ts  toc-store.ts
src/types/: api.ts
types/: cache-life.d.ts  routes.d.ts  validator.ts
(+44 files in other folders)
