[package]
name = "neo-space-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = [ "json" ] }
mongodb = "3.4.1"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [ "full" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
rocket_cors = "0.6.0"
bson = { version = "2.13", features = [ "chrono-0_4" ] }
futures = "0.3.31"
dotenv = "0.15.0"
reqwest = { version = "0.12.26", features = [ "json" ] }
async-openai = { version = "0.32.1", features = [ "chat-completion" ] }
sha1 = "0.10"
md5 = "0.8.0"
urlencoding = "2.1"

# OAuth Authentication dependencies
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
  "use_pem",
  "aws_lc_rs"
] }
rand = "0.9.2"
log = "0.4"
env_logger = "0.11.8"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = [ "mongodb" ]
