[package]
name = "neo-space-backend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
# Rocket: 仅保留 JSON 功能
rocket = { version = "0.5.1", default-features = false, features = [ "json" ] }

# Rocket Pools
rocket_db_pools = { version = "0.2.0", default-features = false, features = [ "mongodb" ] }

# MongoDB:
mongodb = "3.4.1"

# Serde
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.148"

# Tokio: 极致精简，仅保留后端必要模块
tokio = "1.48.0"

# Chrono: 移除 oldtime/clock，保留 serde
chrono = { version = "0.4.42", default-features = false, features = [
  "serde",
  "std",
  "clock"
] }

# Bson: 移除 "std" (因为它不是 v2.x 的可选 feature)，保留 chrono 支持
bson = { version = "2.13", default-features = false, features = [ "chrono-0_4" ] }

# Futures
futures = { version = "0.3.31", default-features = false, features = [
  "std",
  "async-await"
] }

# Reqwest: 强制使用 rustls，移除默认 TLS 和 Cookie Store
reqwest = { version = "0.12.26", default-features = false, features = [
  "json",
  "rustls-tls"
] }

# Async OpenAI
async-openai = { version = "0.32.1", default-features = false, features = [ "chat-completion" ] }

# Regex
regex = { version = "1.11", default-features = false, features = [
  "std",
  "perf",
  "unicode"
] }

# Utils & Crypto (移除不需要的默认 features)
sha1 = { version = "0.10", default-features = false }
md5 = { version = "0.8.0", default-features = false }
urlencoding = "2.1"
dotenv = "0.15.0"
rocket_cors = { version = "0.6.0", default-features = false }

# OAuth
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
  "use_pem",
  "aws_lc_rs"
] }
rand = { version = "0.9.2", default-features = false, features = [ "std_rng" ] }

# Logging
log = "0.4"
env_logger = { version = "0.11.8", default-features = false }

# IP & Cache
ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master", package = "ip2region", default-features = false }
moka = { version = "0.12.12", default-features = false, features = [ "future" ] }

# Crypto
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
hex = { version = "0.4.3", default-features = false, features = [ "std" ] }
